VerifyOops fails on SPARC

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • hs25
    • Affects Version/s: hs25
    • Component/s: hotspot
    • b56
    • sparc
    • solaris

        VerifyOops fails when metadata is passed

        bus2001110% ~/jdk1.8.0/fastdebug/bin/java -XX:+VerifyOops -Xcomp
        =============== DEBUG MESSAGE: broken oop tmp1 at offset 264 (/HUDSON/workspace/2-build-solaris-sparc/jdk8/3240/hotspot/src/cpu/sparc/vm/c1_LIRAssembler_sparc.cpp:2582) ================

        # To suppress the following error report, specify this argument
        # after -XX: or in .hotspotrc: SuppressErrorAt=/macroAssembler_sparc.cpp:1684
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/HUDSON/workspace/2-build-solaris-sparc/jdk8/3240/hotspot/src/cpu/sparc/vm/macroAssembler_sparc.cpp:1684), pid=17444, tid=2
        # assert(false) failed: DEBUG MESSAGE: broken oop tmp1 at offset 264 (/HUDSON/workspace/2-build-solaris-sparc/jdk8/3240/hotspot/src/cpu/sparc/vm/c1_LIRAssembler_sparc.cpp:2582)
        #
        # JRE version: Java(TM) SE Runtime Environment (8.0-b76) (build 1.8.0-ea-fastdebug-b76)
        # Java VM: Java HotSpot(TM) Server VM (25.0-b17-fastdebug compiled mode solaris-sparc )
        # Core dump written. Default location: /home/vdanushe/specjvm/core or core.17444
        #


        another failure is triggered by verifying OOPs in mem2reg.

        ILW -> ??L -> HHL = P2
        I: ? (High)
        L: ? (High)
        W: Low

              Assignee:
              Morris Meyer (Inactive)
              Reporter:
              Vladimir Danushevsky (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              9 Start watching this issue

                Created:
                Updated:
                Resolved: