8008242: VerifyOops is broken on SPARC

Fixed displacement issues in SPARC macroassembler and ensure that getClass intrinsic temporary result is T_METADATA

Reviewed-by: kvn, twisti